# UtilsClass

./: .gitignore  .travis.yml  CMakeLists.txt  ModelException.cpp  ModelException.h  README.md  appveyor.yml  main.cpp  util.cpp  util.h  utils.cpp  utils.h
cmake/: CodeCoverage.cmake
doc/ci/travis/linux_gcc48/: install.sh  script.sh
doc/ci/travis/osx_xcode/: install.sh  script.sh
test/: CMakeLists.txt  Test_main.cpp  Test_utilsfileio.cpp  ut_utilsfileio.cpp
test/googletest/: CMakeLists.txt
